# InnomBot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.ebextensions/: cron.yaml  django.config
.github/workflows/: main.yml
config/: settings.py  urls.py
vacations/: admin.py  form_maker.py  models.py  serializers.py  slack.py  tests.py  urls.py  views.py
vacations/management/commands/: init_user.py  init_vacation_type.py
